--- a/server/views/scores.jade
+++ b/server/views/scores.jade
@@ -4,6 +4,7 @@ block title
   title Solinor mthon - submit your answer
 
 block content
+  a(href="/scores/resources") Part two result thingies here or something
   #results
 
   script.
